Fixing css update not showing

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -394,4 +394,5 @@ nav ul li a {
       margin: 15px;
       font-size: 16px;
       line-height: 1.8em;
+      text-align: center;
 }
